java 11 support by adding and removing stuff in pom files, and fixed wildfly-maven-plugin