@@ -11,7 +11,7 @@
 	<packaging>war</packaging>
 	<name>PIC-SURE API war</name>
 	<properties>
-		<argLine>--add-modules jdk.incubator.httpclient</argLine>
+		<!--<argLine>&#45;&#45;add-modules jdk.incubator.httpclient</argLine>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,7 +71,6 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.8.9</version>
 			<scope>test</scope>
 		</dependency>
         <dependency>
@@ -121,15 +120,15 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>9</source>
-					<target>9</target>
-					<compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-compiler-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<source>9</source>-->
+					<!--<target>9</target>-->
+					<!--<compilerArgument>&#45;&#45;add-modules=jdk.incubator.httpclient</compilerArgument>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 </project>
