@@ -24,10 +24,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.7.0</version>
+					<version>3.8.0</version>
 					<configuration>
-						<source>9</source>
-						<target>9</target>
+						<release>11</release>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -41,7 +40,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.20.1</version>
+					<version>2.22.0</version>
+					<configuration>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -185,6 +189,12 @@
 				<artifactId>commons-lang3</artifactId>
 				<version>3.7</version>
 				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>2.23.4</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 
